--- a/IAmAndriiBotCmd/Dockerfile.txt
+++ b/IAmAndriiBotCmd/Dockerfile.txt
@@ -3,7 +3,7 @@
 WORKDIR /app
 
 COPY *.csproj ./
-RUN dotnet restore
+RUN dotnet restore C:\Users\malya\source\repos\IAmAndriiBotCmd\IAmAndriiBotCmd\IAmAndriiBotCmd.csproj
 
 COPY . ./
 
