--- a/IAmAndriiBotCmd/Dockerfile.txt
+++ b/IAmAndriiBotCmd/Dockerfile.txt
@@ -1,18 +1,11 @@
-﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+﻿# Build stage
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
+COPY . .
+RUN dotnet publish -c Release -o /app
 
+# Runtime stage
+FROM mcr.microsoft.com/dotnet/runtime:8.0
 WORKDIR /app
-
-COPY *.csproj ./
-RUN dotnet restore IAmAndriiBotCmd\IAmAndriiBotCmd.csproj
-
-COPY . ./
-
-RUN dotnet publish -c Release -o out
-
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
-
-WORKDIR /app
-
-COPY --from=build /app/out .
-
+COPY --from=build /app .
 ENTRYPOINT ["dotnet", "IAmAndriiBotCmd.dll"]
