--- a/fly.toml
+++ b/fly.toml
@@ -14,7 +14,10 @@ primary_region = 'fra'
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
+  
+  [[processes]]
+  name = "worker"
+  cmd = []
 
 [[vm]]
   memory = '1gb'
